Refactor: refactor codes in custom_hn_exercise_counter/**/exercise_counter.py.
1. Rename is_bbox_and_keypoints_empty to is_bbox_or_keypoints_empty.
2. Remove unnecessary if clause check after line 247.
3. Remove pose correction string.
4. Renamed output dict key body_direction to expected_pose to stay consistent with naming conventions. Also changed them in pipeline_config.yml and exercise_counter.yml since key name is changed.
5. Renamed interested_keypoints in count_push_ups method to interested_keypoints_names_to_index.

--- a/custom_hn_exercise_counter/pipeline_config.yml
+++ b/custom_hn_exercise_counter/pipeline_config.yml
@@ -28,7 +28,7 @@ nodes:
 - draw.legend:
     show: ["fps"]
 - output.csv_writer:
-    stats_to_track: ["keypoints", "bboxes", "bbox_labels", "num_push_ups", "frame_count", "body_direction", "elbow_angle","shoulder_keypoint", "elbow_keypoint", "wrist_keypoint", "filename"]
+    stats_to_track: ["keypoints", "bboxes", "bbox_labels", "num_push_ups", "frame_count", "expected_pose", "elbow_angle","shoulder_keypoint", "elbow_keypoint", "wrist_keypoint", "filename"]
     file_path: "./stores/artifacts/push_ups_output_movenet.csv"
     logging_interval: 0
 - output.screen
