--- a/custom_hn_exercise_counter/src/custom_nodes/configs/dabble/exercise_counter.yml
+++ b/custom_hn_exercise_counter/src/custom_nodes/configs/dabble/exercise_counter.yml
@@ -1,6 +1,6 @@
 # Dabble node has both input and output
 input: ["img", "bboxes", "bbox_scores", "keypoints", "keypoint_scores", "filename"]
-output: ["frame_count", "num_push_ups", "body_direction", "elbow_angle", "shoulder_keypoint", "elbow_keypoint", "wrist_keypoint", "filename"]
+output: ["frame_count", "num_push_ups", "expected_pose", "elbow_angle", "shoulder_keypoint", "elbow_keypoint", "wrist_keypoint", "filename"]
 
 # Optional configs
 keypoint_threshold: 0.3
