Refactor: refactor dataclass PushupPoseParams to take in params from a dict.
- from_dict method implemented to take in values from .yml file and return a PushupPoseParams dataclass.
- Added config in both pipeline_config.yml and exercise_counter.yml.

--- a/custom_hn_exercise_counter/src/custom_nodes/configs/dabble/exercise_counter.yml
+++ b/custom_hn_exercise_counter/src/custom_nodes/configs/dabble/exercise_counter.yml
@@ -5,3 +5,7 @@ output: ["frame_count", "num_push_ups", "expected_pose", "elbow_angle", "shoulde
 # Optional configs
 keypoint_threshold: 0.3
 exercise_name: "push_ups"
+push_up_pose_params: {
+    starting_elbow_angle: 155,
+    ending_elbow_angle: 90,
+}   
