--- a/custom_hn_exercise_counter/pipeline_config.yml
+++ b/custom_hn_exercise_counter/pipeline_config.yml
@@ -20,6 +20,10 @@ nodes:
 - custom_nodes.dabble.exercise_counter:
     keypoint_threshold: 0.3
     exercise_name: "push_ups"
+    push_up_pose_params: {
+        starting_elbow_angle: 155,
+        ending_elbow_angle: 90,
+    }   
 - draw.poses
 # - model.mtcnn:
 #     min_size: 20
