--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ nav:
   - Home: index.md
   - PeekingDuck:
     - Workflows: workflows.md
-    - PeekingDuck Source Code Brief Tracing: pkd.md
+    # - PeekingDuck Source Code Brief Tracing: pkd.md
     - Exercise Counter: exercise_counter.md
     - Melanoma Prediction with Grad-CAM: melanoma_gradcam.md
   - API Documentation: 
@@ -14,6 +14,8 @@ theme:
   features:
     - content.code.annotate
 markdown_extensions:
+  - attr_list
+  - md_in_html
   - admonition
   - footnotes
   - pymdownx.highlight
