--- a/custom_hn_melanoma_gradcam/pipeline_config.yml
+++ b/custom_hn_melanoma_gradcam/pipeline_config.yml
@@ -6,4 +6,6 @@ nodes:
    stats_to_track: ["filename", "pred_label", "pred_score"]
    file_path: "./stores/artifacts/resnet_melanoma.csv"
    logging_interval: 0
+- draw.legend:
+   show: ["filename", "pred_label", "pred_score"]
 - custom_nodes.output.screen
