--- a/custom_hn_melanoma_gradcam/src/custom_nodes/configs/model/melanoma_classifier.yml
+++ b/custom_hn_melanoma_gradcam/src/custom_nodes/configs/model/melanoma_classifier.yml
@@ -27,7 +27,7 @@ class_label_map: {
     1: "malignant",
 }
 
-model_type: resnet50d # yolox-tiny, yolox-s, yolox-m, or yolox-l
+model_type: resnet50d
 input_size: 224
 mean: [0.485, 0.456, 0.406]
 std: [0.229, 0.224, 0.225]
