Update: update pipeline_config.yml with media_writer.

--- a/custom_hn_melanoma_gradcam/pipeline_config.yml
+++ b/custom_hn_melanoma_gradcam/pipeline_config.yml
@@ -9,3 +9,5 @@ nodes:
 - draw.legend:
    show: ["filename", "pred_label", "pred_score"]
 - custom_nodes.output.screen
+- output.media_writer:
+   output_dir : "./stores/artifacts/"
